--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "webpack-dev-server --open --config webpack.dev.conf.js",
+    "build": "webpack --config webpack.build.conf.js",
     "dev": "webpack-dev-server --open --config webpack.dev.conf.js",
     "prod": "webpack --config webpack.build.conf.js",
     "test": "echo \"Error: no test specified\" && exit 1"
